static/css/styles.scss
$tdk: #282B2F;
$tdk-lt: #575B61;

$storm: #6E6D79;
$storm-lt: #A6AEB6;

$maxx: #7B53FC;
$maxx-lt: #9A7AFF;

$cayman: #1FC7C8;
$cayman-lt: #41E3E5;

$gecko: #02BE67;
$gecko-lt: #12CF79;

$ss-font-family: GothamHTF, 'Open Sans', helvetica, arial, sans-serif;


html, body, .index, .app, .site-map, .site-setup, .root, .company-app, .main-container, .site-reports {
    height: 100%;
    font-family: $ss-font-family;
}
h1 {
    font-weight: normal;
}

.lead {
    font-weight: 200;
}
h1, h2, h3, h4 {
    font-family: $ss-font-family;
}
h3 {
    font-family: GothamHTF;
    font-size: 20px;
    color: #575C61;
    letter-spacing: 0.4px;
    line-height: 32px;
}
h4 {
    font-family: GothamHTF;
    font-size: 16px;
    color: #575C61;
    letter-spacing: 0.3px;
    line-height: 24px;
}

.btn {
    font-family: $ss-font-family;
    border-radius: 3px;
    font-family: GothamHTF;
    font-size: 14px;
    color: #FFFFFF;
    line-height: 26px;
    min-width: 120px;
    box-sizing: border-box;
}
.btn-default {
    /* Rectangle 4: */
    background: #FFFFFF;
    border: 1px solid rgba(86,91,96,0.20);
    box-shadow: 0 2px 5px 0 rgba(86,91,96,0.08);
    border-radius: 3px;
    font-family: GothamHTF;
    font-size: 14px;
    color: #575C61;
    vertical-align: middle;
    cursor: pointer;

    .material-icons {
        vertical-align: middle;
        font-size: 22px;
        letter-spacing: 0.79px;
        color: #1FC7C8;
        margin-right: 5px;
        &.warning {
            color: #d9534f;
        }
    }
}
.btn-primary {

}
.btn-link {
    color: #C7B5FE;
}
.form-button-row {
    .btn {
        margin-top: 15px;
    }
}
.warning {
    color: #d9534f;
    vertical-align: middle;
}
.btn + .btn {
    margin-left: 15px;
}
[type="checkbox"],
[type="radio"] {
  box-sizing: border-box;
  height: 25px;
  width: 25px;
}

#wrapper {
    min-height: 100%;
    margin: 0 auto -60px;
}

#footer, #pusher {
    height: 60px;
}

#footer {
    a { padding: 5px 10px; }
}

body {
    min-height: 800px;
}
.company-app {
    // margin-bottom: 100px;
}
.gray {
  background-color: lightgray;
  padding: 25px;
  height: 200px;
}

.flash {
    margin: 0;
}
.status-circle {
    height: 8px;
    width: 8px;
    border-radius: 8px;
    display: inline-block;
    padding: 5px;
    &.success {
        /* Oval 2: */
        background: #12CF79;
    }
    &.warning {
        background: #FFC96F;
    }
    &.danger {
        background: #E44242;
    }
}
@media (min-width: 1200px) {
    .container {
        width: 970px;
    }
}

.navbar {
    height: 79px;
    background: #FFFFFF;
    box-shadow: 0 2px 20px 0 rgba(0,0,0,0.08);
    padding: 20px 30px;
    position: relative;
    margin-bottom: 35px;
    h1 {
        /* New Site: */
        font-family: GothamHTF;
        font-size: 20px;
        color: #575C61;
        letter-spacing: 0.71px;
        margin: 0;
        line-height: 34px;
        vertical-align: middle;
    }

    .navbar-brand {
        /* Dashboard: */
        font-family: GothamHTF;
        font-size: 20px;
        color: #575C61;
        letter-spacing: 0.4px;
        line-height: 32px;

        &.navbar-sidebar {
            font-weight: 500;
            font-size: 12px;
            letter-spacing: 0.43px;
            line-height: 12px;
        }
    }
    .site-name {
        font-family: GothamHTF;
        font-size: 20px;
        color: #575C61;
        letter-spacing: 0.71px;
        position: absolute;
        z-index: 10;
        left: 30px;
        top: 36px;
    }
}
.nav-tabs {
    border-bottom: 2px solid #D2D4D7;

    .nav-item {
        /* Lab Associates: */
        margin-bottom: -2px;
        font-family: GothamHTF;
        font-size: 13px;
        color: rgba(40, 43, 47, 0.5);
        letter-spacing: 0;
        &:hover {
            color: #282B2F;
        }
        &.action {
            // align-self: flex-end;
            .material-icons {
                position: absolute;
            }
        }
    }
    .nav-link {
        border: none;
        padding: 0 30px 20px 0;

        &.active {
            padding: 0 0 20px 0;
            margin-right: 30px;
            background: none;
            /* Lab Admins: */
            font-family: GothamHTF;
            font-size: 13px;
            color: #282B2F;
            letter-spacing: 0;
            border-bottom: 2px solid #282B2F;
        }
        &:hover {
            color: #282B2F;
        }
    }
}
.lab-logos {
    text-align: center;
    img {
        vertical-align: middle;
        max-width: 100%;
        max-height: 80px;
        margin-bottom: 20px;
        &.als {
            max-height: 80px;
        }
        &.biochem {
            max-height: 80px;
        }
        &.esc {
            max-height: 70px;
            margin-bottom: 30px;
        }
        &.pace {
            max-height: 80px;
        }
        &.rti {
            max-height: 60px;
            margin-bottom: 40px;
        }
        &.sos {
            max-height: 80px;
        }
    }
}
.reports-images {
    img {
        vertical-align: middle;
        max-width: 100%;
    }
}
.index {
    background: #FAFBFD;
    .jumbotron {
        min-height: 400px;
        position: relative;
        z-index: 1;
        h1 {
            margin-top: 80px;
        }
        &:after {
          content: "";
          position: absolute;
          top: 0;
          left: 0;
          width: 100%;
          height: 100%;
          opacity: .4;
          z-index: -1;
          background: url('/static/img/splash2.jpg');
          background-size: cover;
          background-position: bottom center;

        }
    }
}
/* ... */

